--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -98,9 +98,9 @@
   flex-direction: column;
   max-width: 1000px;
   padding: 60px 25px;
-  img {
-    width: 100%;
-  }
+}
+.ql-editor {
+  height: fit-content !important;
 }
 .navbar-toggler{
   border: transparent;
@@ -169,7 +169,9 @@
     }
   }
 
-
+  .ql-editor ol li:before {
+    content: none !important;
+  }
 
 
   .row-my-mind {
