--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -66,7 +66,7 @@
         background-color: #fff;
         border-radius: 12px;
         border: 1px solid #fff;
-            position: absolute;
+            position: fixed;
         width: 100%;
         top: 0;
         left: 0;
@@ -112,11 +112,13 @@
     background-image: none !important;
     background-color: var(--bs-gray-800);
     height: 2px;
-    width: 25px;
+    width: 35px;
     margin: 10px 0;
-    position: relative;
     transition: all 0.35s ease-out;
     transform-origin: center;
+    position: fixed;
+      top: 21px;
+      right: 19px;
   }
   
   .navbar-toggler-icon::before {
