--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -247,3 +247,62 @@
   height: auto;
   border-radius: 5px;
 }
+        /* Loading Indicator Styles */
+        #loading-indicator {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background-color: rgba(255, 255, 255, 0.8);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 9999;
+        }
+    
+        .spinner {
+          width: 80px;
+          height: 80px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: relative;
+        }
+    
+        .spinner div {
+          box-sizing: border-box;
+          position: absolute;
+          width: 64px;
+          height: 64px;
+          border: 2px solid #000;
+          border-radius: 50%;
+          animation: spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+          border-color: #000 transparent transparent transparent;
+        }
+    
+        .spinner div:nth-child(1) {
+          animation-delay: -0.45s;
+        }
+    
+        .spinner div:nth-child(2) {
+          animation-delay: -0.3s;
+        }
+    
+        .spinner div:nth-child(3) {
+          animation-delay: -0.15s;
+        }
+    
+        @keyframes spinner {
+          0% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+    
+        .nav-item:hover {
+          text-decoration-color: #000 !important;
+          color: #000 !important;
+        }
