--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -17,6 +17,11 @@
             margin: 0 auto;
 }
 @media (max-width: 768px) {
+    .navbar-toggler{
+        width: 50px;
+        height: 50px;
+        z-index: 10000;
+    }
     .nav-item, .nav-link {
         color: #000 !important;
         display: flex;
