--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -22,6 +22,9 @@
         height: 50px;
         z-index: 10000;
     }
+    .nav-link {
+        width: 100%;
+    }
     .nav-item, .nav-link {
         color: #000 !important;
         display: flex;
