Admin Upload Margins and Lighbox Date

--- a/resources/sass/_my-mind.scss
+++ b/resources/sass/_my-mind.scss
@@ -1,4 +1,10 @@
         /* Modal styles */
+
+        .lightbox-modal-date {
+            text-align: center;
+            color: #fff;
+            margin-top: 1rem;
+        }
         /* Grid and Modal styles */
         .grid-my-mind {
             display: grid;
