--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,15 @@
   .pagination {
       margin-left: 1rem;
     }
+    .page-item{
+      color:#000;
+      &hover{
+        color: #000;
+      }
+    }
+    .page-item.active{
+      background-color: #000;
+    }
 }
 
 .main-content {
