--- a/resources/sass/_my-mind.scss
+++ b/resources/sass/_my-mind.scss
@@ -5,18 +5,28 @@
             color: #fff;
             margin-top: 1rem;
         }
+
         /* Grid and Modal styles */
         .grid-my-mind {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 10px;
+            column-count: 3;
+            column-gap: 20px 20px;
         }
 
-        .grid-item-my-mind img {
-            width: 100%; /* Ensures the image scales with the container */
-            height: auto; /* Maintains the aspect ratio */
-            cursor: pointer;
-            display: block; /* Ensures the image behaves as a block element */
+        .grid-item-my-mind {
+            margin: 0;
+            display: inline-block;
+            margin-bottom: 0px;
+            width: 100%;
+        
+            img {
+                width: 100%;
+                /* Ensures the image scales with the container */
+                height: auto;
+                /* Maintains the aspect ratio */
+                cursor: pointer;
+                display: block;
+                /* Ensures the image behaves as a block element */
+            }
         }
 
         .modal {
@@ -70,19 +80,8 @@
             }
 
             .grid-my-mind {
-                grid-template-columns: repeat(2, 1fr) !important; /* 2 cards per row */
-            }
-        }
-
-        @media (max-width: 480px) {
-            .modal-content {
-                width: 95%;
-            }
-
-            .close {
-                font-size: 25px;
-                right: 20px;
-                top: 5px;
+                column-count: 2;
+                column-gap: 20px 20px;
             }
         }
 
@@ -105,7 +104,7 @@
         .image:nth-child(1) {
             transform: rotate(-10deg);
             z-index: 1;
-            background: linear-gradient(45deg, #111 30%, #444 70%); 
+            background: linear-gradient(45deg, #111 30%, #444 70%);
         }
 
         .image:nth-child(2) {
