--- a/resources/sass/_my-mind.scss
+++ b/resources/sass/_my-mind.scss
@@ -104,18 +104,18 @@
         .image:nth-child(1) {
             transform: rotate(-10deg);
             z-index: 1;
-            background: linear-gradient(45deg, #111 30%, #444 70%);
+            background: linear-gradient(135deg, #ff793f 0%, #ffa858 25%, #f1ac6a 50%, #ffa858 75%, #ff793f 100%);
         }
-
+        
         .image:nth-child(2) {
             transform: rotate(10deg);
             z-index: 2;
-            background: linear-gradient(45deg, #333 30%, #666 70%);
+            background: linear-gradient(135deg, #ff793f 0%, #ffa858 25%, #f1ac6a 50%, #ffa858 75%, #ff793f 100%);
         }
-
+        
         .image:nth-child(3) {
             z-index: 3;
-            background: linear-gradient(45deg, #222 30%, #555 70%);
+            background: linear-gradient(135deg, #ff793f 0%, #ffa858 25%, #f1ac6a 50%, #ffa858 75%, #ff793f 100%);
         }
 
         .button {
@@ -123,7 +123,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: #fff;
+            color: #fff;
             padding: 10px 20px;
             border-radius: 20px;
             font-size: 16px;
