--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,8 +81,7 @@
           text-decoration-color: rgb(255, 255, 255);
   }
   .navbar-collapse.show{
-        background-color: #fff;
-        border: 1px solid #fff;
+        background-color: #a4b0be;
             position: fixed;
         width: 100%;
         top: 0;
