--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -119,6 +119,11 @@
   -moz-tab-size: 20;
   -o-tab-size: 20;
   height: fit-content !important;
+  .ql-align-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   p {
     text-indent: 20px;
   }
