--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -30,10 +30,10 @@
         text-decoration: underline;
     }
     .nav-item, .nav-link {
-        color: #000 !important;
+        color: #fff !important;
         display: flex;
         justify-content: center;
-        font-size: 1.5rem !important;
+        font-size: 2.2rem !important;
     }
         .under-line {
             display: none;
