--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -87,7 +87,7 @@
   top: 0;
   left: 0;
   z-index: 5;
-  background-color: #a4b0be;
+  background-color: rgba(164, 176, 190, 0.7);
   overflow: hidden;
   max-height: 0;
   opacity: 0;
